name:                asteroids
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/asteroids#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Asteroids
                     , Asteroids.GameLogic
                     , Asteroids.GameLogic.Asteroid
                     , Asteroids.GameLogic.Game
                     , Asteroids.GameLogic.GameOptions
                     , Asteroids.GameLogic.KeyAction
                     , Asteroids.GameLogic.Physical
                     , Asteroids.GameLogic.Ship
                     , Asteroids.Helpers
                     , Asteroids.UILogic
                     , Asteroids.UILogic.AspectRatio
                     , Asteroids.UILogic.Bindings
                     , Asteroids.UILogic.Display
                     , Asteroids.UILogic.Drawable
                     , Asteroids.UILogic.KeyBindings
                     , Asteroids.UILogic.Letters
                     , Asteroids.UILogic.TextScreen
                     , GameState
                     , PolyPt2
                     , LinePt2
                     , Pt2
                     , Rand
                     , TriPt2
  build-depends:       base >= 4.7 && < 5
                     , clock
                     , containers
                     , GLUT
                     , hashable
                     , mtl
                     , OpenGL
                     , random
                     , time
                     , tf-random
                     , transformers
                     , unordered-containers
                     , vector-space
  default-language:    Haskell2010

executable asteroids
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , asteroids
                     , GLUT
                     , OpenGL
                     , random
                     , mtl
                     , random
                     , tf-random
  default-language:    Haskell2010

test-suite asteroids-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Pt2_Test
                     , PolyPt2_Test
                     , LinePt2_Test
                     , TestUtils
  build-depends:       base
                     , asteroids
                     , GLUT
                     , HUnit
                     , mtl
                     , OpenGL
                     , random
                     , tf-random
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/asteroids
